--- a/chat.html
+++ b/chat.html
@@ -16,49 +16,65 @@
   --color-primary-hover: #45a049;
   --color-name: #1976d2;
 }
+/* RESET */
 * { box-sizing: border-box; margin:0; padding:0; }
 html, body { height:100%; font-family:Arial,sans-serif; background: var(--color-bg-light); }
 
+/* HEADER */
 header { background:#fff; padding:10px; border-bottom:1px solid #ddd; z-index:100; display:flex; align-items:center; gap:8px; }
 header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primary); font-size:1.4em; }
 .emoji-head { width:32px; height:32px; }
 
+/* TOPBAR */
 #topBar { display:flex; align-items:center; gap:8px; padding:6px 10px; background:#fafafa; border-bottom:1px solid #ddd; flex-wrap:wrap; overflow-x:auto; z-index:100; }
 #topBar button { background:white; color:var(--color-primary); border:1px solid var(--color-primary); padding:6px 10px; border-radius:5px; cursor:pointer; flex-shrink:0; }
+#topBar button:hover { background:var(--color-primary); color:white; }
 #topBar span { font-size:0.9em; flex-shrink:0; }
 
+/* MOBILE USERS HORIZONTAL */
 #mobileUserLine { display:none; overflow-x:hidden; white-space:nowrap; background:#fafafa; padding:6px 4px; border-bottom:1px solid #ddd; }
 .userItemMobile { width:50px; height:50px; border-radius:50%; overflow:hidden; display:inline-block; margin-right:6px; border:2px solid transparent; cursor:pointer; transition: transform 0.2s; position:relative; }
 .userItemMobile img { width:100%; height:100%; border-radius:50%; object-fit:cover; }
 .userItemMobile:hover { border-color:var(--color-primary); transform:scale(1.1); }
 
+/* ALERTA PISCANDO */
 .alert-dot { position:absolute; top:0; right:0; width:12px; height:12px; background:red; border-radius:50%; animation: blink 1s infinite; }
 @keyframes blink { 50% { opacity:0; } }
 
+/* NOME DO USUÁRIO */
 #currentPartner { position:absolute; top:0; right:10px; font-weight:bold; color:var(--color-name); }
 
+/* MAIN */
 #mainContent { display:flex; flex:1; overflow:hidden; height: calc(100vh - 108px); }
 
+/* USER LIST (DESKTOP) */
 #userList { width:200px; background:#fff; border-right:1px solid #ddd; overflow-y:auto; padding:8px; }
 .userItem { display:flex; align-items:center; gap:6px; margin-bottom:6px; cursor:pointer; padding:6px; border-radius:5px; position:relative; }
 .userItem:hover { background:#e0f7e9; }
 .userItem img { width:28px; height:28px; border-radius:50%; }
+.userItem button { margin-left:auto; background:white; color:var(--color-primary); border:1px solid var(--color-primary); padding:4px 6px; border-radius:5px; cursor:pointer; }
+.userItem button:hover { background:var(--color-primary); color:white; }
 
+/* CHAT */
 #chatContainer { flex:1; display:flex; flex-direction:column; overflow:hidden; position:relative; }
 #chatWindow { flex:1; overflow-y:auto; padding:10px; background:white; }
 .msg { margin:5px 0; padding:8px; border-radius:8px; max-width:80%; word-wrap:break-word; position:relative; }
 .userMsg { background:#e0f7e9; align-self:flex-end; text-align:right; }
 .otherMsg { background:#fff8dc; align-self:flex-start; text-align:left; }
 
+/* CHAT INPUT */
 #chatInput { display:flex; border-top:1px solid #ddd; background:white; padding:4px; }
 #chatInput input { flex:1; padding:10px; font-size:1em; border:1px solid #ccc; border-radius:5px; }
 #chatInput button { background:var(--color-primary); color:white; border:none; padding:10px 14px; margin-left:4px; border-radius:5px; cursor:pointer; }
 #chatInput button:hover { background:var(--color-primary-hover); }
 
+/* ADS */
 #adSidebar { width:280px; background:#f1f1f1; border-left:1px dashed #ccc; padding:8px; text-align:center; overflow-y:auto; }
 
+/* FOOTER */
 footer { background:white; color:#555; text-align:center; padding:6px; font-size:0.85em; border-top:1px solid #ddd; }
 
+/* MOBILE */
 @media(max-width:768px){
   html, body { height:100%; overflow:visible; }
   header { position:fixed; top:0; left:0; right:0; z-index:100; height:50px; }
@@ -133,7 +149,6 @@ const currentPartnerEl=document.getElementById("currentPartner");
 let currentChat="global";
 let privateChatListener=null;
 let alertIcons={};
-let hiddenChats={};
 let userData={};
 let currentPartnerUID=null;
 let blockedUsers={};
@@ -188,9 +203,7 @@ function toggleBlock(uid){
     ref.set(true);
     blockedUsers[uid]=true;
     alert("Usuário bloqueado.");
-    if(currentPartnerUID===uid){
-      startGlobalChat();
-    }
+    if(currentPartnerUID===uid) startGlobalChat();
   }
 }
 
@@ -207,6 +220,7 @@ function updateUserList(){
     divGlobal.innerHTML=`<img src="https://cdn-icons-png.flaticon.com/512/3126/3126540.png"><span>Global</span>`;
     divGlobal.onclick=()=>startGlobalChat();
     userList.appendChild(divGlobal);
+
     const mobGlobal=document.createElement("div");
     mobGlobal.className="userItemMobile";
     mobGlobal.innerHTML=`<img src="https://cdn-icons-png.flaticon.com/512/3126/3126540.png" title="Global">`;
@@ -219,6 +233,7 @@ function updateUserList(){
       divSelf.innerHTML=`<img src="${userData.photo}"><span>${userData.name}</span>`;
       divSelf.onclick=()=>alert("Este é você!");
       userList.appendChild(divSelf);
+
       const mobSelf=document.createElement("div");
       mobSelf.className="userItemMobile";
       mobSelf.innerHTML=`<img src="${userData.photo}" title="${userData.name}">`;
@@ -228,12 +243,11 @@ function updateUserList(){
 
     for(const [uid,u] of Object.entries(users)){
       if(!u.name || uid===userData.uid) continue;
+
       const div=document.createElement("div");
       div.className="userItem";
       div.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}"><span>${u.name}</span>`;
-      div.onclick=()=>startPrivateChat(uid,u.name);
       const blockBtn=document.createElement("button");
-      blockBtn.style.marginLeft="auto";
       blockBtn.textContent=blockedUsers[uid]?"Desbloquear":"Bloquear";
       blockBtn.onclick=(e)=>{
         e.stopPropagation();
@@ -241,6 +255,7 @@ function updateUserList(){
         blockBtn.textContent=blockedUsers[uid]?"Desbloquear":"Bloquear";
       };
       div.appendChild(blockBtn);
+      div.onclick=()=>startPrivateChat(uid,u.name);
       userList.appendChild(div);
 
       const mob=document.createElement("div");
@@ -264,7 +279,7 @@ function startGlobalChat(){
   currentPartnerEl.textContent="🌍 Global";
   chatWindow.innerHTML="";
   generalBtn.style.display="none";
-  db.ref("chatGlobal").once("value",s=>s.forEach(m=>showMessage(m.val(),"chatGlobal")));
+  db.ref("chatGlobal").once("value").then(s=>s.forEach(m=>showMessage(m.val(),"chatGlobal")));
 }
 
 // INICIAR CHAT PRIVADO
@@ -293,12 +308,13 @@ function sendMessage(){
     return;
   }
   const path=currentChat==="global"?"chatGlobal":"private/"+currentChat;
-  db.ref(path).push({user:userData.name,uid:userData.uid,text,timestamp:Date.now()});
+  db.ref(path).push({user:userData.name,uid:userData.uid,timestamp:Date.now(),text,hiddenBy:{}});
   msgInput.value="";
 }
 
 function showMessage(msg,room){
   if(room!=="chatGlobal" && room!==currentChat) return;
+  if(msg.hiddenBy && msg.hiddenBy[userData.uid]) return; // mensagem apagada para este usuário
   const div=document.createElement("div");
   div.className=msg.uid===userData.uid?"msg userMsg":"msg otherMsg";
   div.textContent=`${msg.user}: ${msg.text}`;
@@ -309,10 +325,21 @@ function showMessage(msg,room){
 // LISTENERS
 db.ref("chatGlobal").on("child_added",snap=>showMessage(snap.val(),"chatGlobal"));
 
-// APAGAR CHAT LOCAL
+// APAGAR CHAT LOCAL DEFINITIVO PARA USUÁRIO
 function hideChat(chatId){
-  if(confirm("Apagar este chat localmente?")){
-    chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Chat apagado. Você pode retomar a conversa clicando no usuário novamente.</div>`;
+  if(!userData.uid) return;
+  if(confirm("Apagar este chat para você?")){
+    const ref=db.ref("private/"+chatId);
+    ref.once("value").then(snap=>{
+      snap.forEach(msgSnap=>{
+        const msgKey = msgSnap.key;
+        const msgData = msgSnap.val();
+        let hiddenBy = msgData.hiddenBy || {};
+        hiddenBy[userData.uid] = true;
+        ref.child(msgKey).update({hiddenBy});
+      });
+      chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Chat apagado. Você pode retomar a conversa clicando no usuário novamente.</div>`;
+    });
   }
 }
 
