--- a/chat.html
+++ b/chat.html
@@ -16,38 +16,29 @@
   --color-primary-hover: #45a049;
   --color-name: #1976d2;
 }
-/* RESET */
 * { box-sizing: border-box; margin:0; padding:0; }
 html, body { height:100%; font-family:Arial,sans-serif; background: var(--color-bg-light); }
 
-/* HEADER */
 header { background:#fff; padding:10px; border-bottom:1px solid #ddd; z-index:100; display:flex; align-items:center; gap:8px; }
 header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primary); font-size:1.4em; }
 .emoji-head { width:32px; height:32px; }
 
-/* TOPBAR */
 #topBar { display:flex; align-items:center; gap:8px; padding:6px 10px; background:#fafafa; border-bottom:1px solid #ddd; flex-wrap:wrap; overflow-x:auto; z-index:100; }
 #topBar button { background:white; color:var(--color-primary); border:1px solid var(--color-primary); padding:6px 10px; border-radius:5px; cursor:pointer; flex-shrink:0; }
 #topBar button:hover { background:var(--color-primary); color:white; }
 #topBar span { font-size:0.9em; flex-shrink:0; }
 
-/* MOBILE USERS HORIZONTAL */
 #mobileUserLine { display:none; overflow-x:hidden; white-space:nowrap; background:#fafafa; padding:6px 4px; border-bottom:1px solid #ddd; }
 .userItemMobile { width:50px; height:50px; border-radius:50%; overflow:hidden; display:inline-block; margin-right:6px; border:2px solid transparent; cursor:pointer; transition: transform 0.2s; position:relative; }
 .userItemMobile img { width:100%; height:100%; border-radius:50%; object-fit:cover; }
 .userItemMobile:hover { border-color:var(--color-primary); transform:scale(1.1); }
 
-/* ALERTA PISCANDO */
 .alert-dot { position:absolute; top:0; right:0; width:12px; height:12px; background:red; border-radius:50%; animation: blink 1s infinite; }
 @keyframes blink { 50% { opacity:0; } }
 
-/* NOME DO USUÁRIO */
 #currentPartner { position:absolute; top:0; right:10px; font-weight:bold; color:var(--color-name); }
 
-/* MAIN */
 #mainContent { display:flex; flex:1; overflow:hidden; height: calc(100vh - 108px); }
-
-/* USER LIST (DESKTOP) */
 #userList { width:200px; background:#fff; border-right:1px solid #ddd; overflow-y:auto; padding:8px; }
 .userItem { display:flex; align-items:center; gap:6px; margin-bottom:6px; cursor:pointer; padding:6px; border-radius:5px; position:relative; }
 .userItem:hover { background:#e0f7e9; }
@@ -55,26 +46,21 @@ header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primar
 .userItem button { margin-left:auto; background:white; color:var(--color-primary); border:1px solid var(--color-primary); padding:4px 6px; border-radius:5px; cursor:pointer; }
 .userItem button:hover { background:var(--color-primary); color:white; }
 
-/* CHAT */
 #chatContainer { flex:1; display:flex; flex-direction:column; overflow:hidden; position:relative; }
 #chatWindow { flex:1; overflow-y:auto; padding:10px; background:white; }
 .msg { margin:5px 0; padding:8px; border-radius:8px; max-width:80%; word-wrap:break-word; position:relative; }
 .userMsg { background:#e0f7e9; align-self:flex-end; text-align:right; }
 .otherMsg { background:#fff8dc; align-self:flex-start; text-align:left; }
 
-/* CHAT INPUT */
 #chatInput { display:flex; border-top:1px solid #ddd; background:white; padding:4px; }
 #chatInput input { flex:1; padding:10px; font-size:1em; border:1px solid #ccc; border-radius:5px; }
 #chatInput button { background:var(--color-primary); color:white; border:none; padding:10px 14px; margin-left:4px; border-radius:5px; cursor:pointer; }
 #chatInput button:hover { background:var(--color-primary-hover); }
 
-/* ADS */
 #adSidebar { width:280px; background:#f1f1f1; border-left:1px dashed #ccc; padding:8px; text-align:center; overflow-y:auto; }
 
-/* FOOTER */
 footer { background:white; color:#555; text-align:center; padding:6px; font-size:0.85em; border-top:1px solid #ddd; }
 
-/* MOBILE */
 @media(max-width:768px){
   html, body { height:100%; overflow:visible; }
   header { position:fixed; top:0; left:0; right:0; z-index:100; height:50px; }
@@ -98,6 +84,7 @@ footer { background:white; color:#555; text-align:center; padding:6px; font-size
   <button id="loginBtn">Login com Google</button>
   <button id="logoutBtn" style="display:none;">Logout</button>
   <button id="generalBtn" style="display:none;">⬅ Bate-papo geral</button>
+  <button id="clearGlobalBtn" style="display:none;">🗑 Limpar Chat Global</button>
   <span id="alertaLogin">⚠️ Faça login para enviar mensagens.</span>
   <span id="onlineCount">👥 Usuários online: 0</span>
 </div>
@@ -145,6 +132,7 @@ const onlineCount=document.getElementById("onlineCount");
 const generalBtn=document.getElementById("generalBtn");
 const mobileUserLine=document.getElementById("mobileUserLine");
 const currentPartnerEl=document.getElementById("currentPartner");
+const clearGlobalBtn=document.getElementById("clearGlobalBtn");
 
 let currentChat="global";
 let privateChatListener=null;
@@ -164,6 +152,7 @@ auth.onAuthStateChanged(user=>{
     alertaLogin.style.display="none";
     msgInput.disabled=false;
     sendBtn.disabled=false;
+    clearGlobalBtn.style.display="inline-block";
 
     userData={uid:user.uid,name:user.displayName,photo:user.photoURL};
     db.ref("online/"+user.uid).set({name:user.displayName,photo:user.photoURL});
@@ -176,6 +165,7 @@ auth.onAuthStateChanged(user=>{
     alertaLogin.style.display="inline-block";
     msgInput.disabled=true;
     sendBtn.disabled=true;
+    clearGlobalBtn.style.display="none";
     userData={};
     currentPartnerUID=null;
     updateUserList();
@@ -293,7 +283,7 @@ function startPrivateChat(uid,name){
 
   if(privateChatListener) privateChatListener.off();
   privateChatListener=db.ref("private/"+currentChat);
-  privateChatListener.on("child_added",s=>showMessage(s.val(),currentChat));
+  privateChatListener.on("child_added",s=>showMessage(s.val(),currentChat,true));
 }
 
 // FUNÇÕES DE MENSAGEM
@@ -312,22 +302,44 @@ function sendMessage(){
   msgInput.value="";
 }
 
-function showMessage(msg,room){
+// Mostrar mensagem e notificação
+function showMessage(msg,room,privateMsg=false){
   if(room!=="chatGlobal" && room!==currentChat) return;
-  if(msg.hiddenBy && msg.hiddenBy[userData.uid]) return; // mensagem apagada para este usuário
+  if(msg.hiddenBy && msg.hiddenBy[userData.uid]) return;
+
   const div=document.createElement("div");
   div.className=msg.uid===userData.uid?"msg userMsg":"msg otherMsg";
   div.textContent=`${msg.user}: ${msg.text}`;
   chatWindow.appendChild(div);
   chatWindow.scrollTop=chatWindow.scrollHeight;
+
+  // Se não for do usuário logado, mostrar alerta
+  if(msg.uid!==userData.uid && !privateMsg){
+    const userIcon = alertIcons[msg.uid];
+    if(userIcon){
+      ['desktop','mobile'].forEach(pos=>{
+        const dot = document.createElement('div');
+        dot.className='alert-dot';
+        userIcon[pos].appendChild(dot);
+        setTimeout(()=>dot.remove(),3000);
+      });
+    }
+    if(Notification.permission==="granted"){
+      new Notification("Nova mensagem", {body:`${msg.user}: ${msg.text}`, icon:msg.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'});
+    }
+  }
+}
+
+// Pedir permissão de notificação
+if("Notification" in window){
+  Notification.requestPermission();
 }
 
 // LISTENERS
 db.ref("chatGlobal").on("child_added",snap=>showMessage(snap.val(),"chatGlobal"));
 
-// APAGAR CHAT LOCAL DEFINITIVO PARA USUÁRIO
+// APAGAR CHAT LOCAL (privado)
 function hideChat(chatId){
-  if(!userData.uid) return;
   if(confirm("Apagar este chat para você?")){
     const ref=db.ref("private/"+chatId);
     ref.once("value").then(snap=>{
@@ -339,6 +351,22 @@ function hideChat(chatId){
         ref.child(msgKey).update({hiddenBy});
       });
       chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Chat apagado. Você pode retomar a conversa clicando no usuário novamente.</div>`;
+    });
+  }
+}
+
+// LIMPAR CHAT GLOBAL LOCAL
+clearGlobalBtn.onclick=()=>{
+  if(confirm("Apagar o chat global apenas para você?")){
+    db.ref("chatGlobal").once("value").then(snap=>{
+      snap.forEach(msgSnap=>{
+        const key = msgSnap.key;
+        const msg = msgSnap.val();
+        const hiddenBy = msg.hiddenBy||{};
+        hiddenBy[userData.uid]=true;
+        db.ref("chatGlobal/"+key).update({hiddenBy});
+      });
+      chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Chat global limpo para você.</div>`;
     });
   }
 }
