--- a/chat.html
+++ b/chat.html
@@ -25,13 +25,13 @@ header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primar
 
 #topBar { display:flex; align-items:center; gap:8px; padding:6px 10px; background:#fafafa; border-bottom:1px solid #ddd; flex-wrap:wrap; overflow-x:auto; z-index:100; }
 #topBar button { background:white; color:var(--color-primary); border:1px solid var(--color-primary); padding:6px 10px; border-radius:5px; cursor:pointer; flex-shrink:0; }
-#topBar button:hover { background:var(--color-primary); color:white; }
 #topBar span { font-size:0.9em; flex-shrink:0; }
 
-#mobileUserLine { display:none; overflow-x:hidden; white-space:nowrap; background:#fafafa; padding:6px 4px; border-bottom:1px solid #ddd; }
+#mobileUserLine { display:none; overflow-x:hidden; white-space:nowrap; background:#fafafa; padding:6px 4px; border-bottom:1px solid #ddd; position:relative; }
 .userItemMobile { width:50px; height:50px; border-radius:50%; overflow:hidden; display:inline-block; margin-right:6px; border:2px solid transparent; cursor:pointer; transition: transform 0.2s; position:relative; }
 .userItemMobile img { width:100%; height:100%; border-radius:50%; object-fit:cover; }
 .userItemMobile:hover { border-color:var(--color-primary); transform:scale(1.1); }
+.userItemMobile button { position:absolute; bottom:0; right:0; padding:2px 4px; font-size:10px; border-radius:3px; border:1px solid var(--color-primary); background:white; color:var(--color-primary); cursor:pointer; }
 
 .alert-dot { position:absolute; top:0; right:0; width:12px; height:12px; background:red; border-radius:50%; animation: blink 1s infinite; }
 @keyframes blink { 50% { opacity:0; } }
@@ -39,12 +39,12 @@ header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primar
 #currentPartner { position:absolute; top:0; right:10px; font-weight:bold; color:var(--color-name); }
 
 #mainContent { display:flex; flex:1; overflow:hidden; height: calc(100vh - 108px); }
+
 #userList { width:200px; background:#fff; border-right:1px solid #ddd; overflow-y:auto; padding:8px; }
 .userItem { display:flex; align-items:center; gap:6px; margin-bottom:6px; cursor:pointer; padding:6px; border-radius:5px; position:relative; }
 .userItem:hover { background:#e0f7e9; }
 .userItem img { width:28px; height:28px; border-radius:50%; }
-.userItem button { margin-left:auto; background:white; color:var(--color-primary); border:1px solid var(--color-primary); padding:4px 6px; border-radius:5px; cursor:pointer; }
-.userItem button:hover { background:var(--color-primary); color:white; }
+.userItem button { margin-left:auto; border:1px solid var(--color-primary); background:white; color:var(--color-primary); border-radius:5px; padding:4px 6px; cursor:pointer; }
 
 #chatContainer { flex:1; display:flex; flex-direction:column; overflow:hidden; position:relative; }
 #chatWindow { flex:1; overflow-y:auto; padding:10px; background:white; }
@@ -84,7 +84,6 @@ footer { background:white; color:#555; text-align:center; padding:6px; font-size
   <button id="loginBtn">Login com Google</button>
   <button id="logoutBtn" style="display:none;">Logout</button>
   <button id="generalBtn" style="display:none;">⬅ Bate-papo geral</button>
-  <button id="clearGlobalBtn" style="display:none;">🗑 Limpar Chat Global</button>
   <span id="alertaLogin">⚠️ Faça login para enviar mensagens.</span>
   <span id="onlineCount">👥 Usuários online: 0</span>
 </div>
@@ -132,16 +131,18 @@ const onlineCount=document.getElementById("onlineCount");
 const generalBtn=document.getElementById("generalBtn");
 const mobileUserLine=document.getElementById("mobileUserLine");
 const currentPartnerEl=document.getElementById("currentPartner");
-const clearGlobalBtn=document.getElementById("clearGlobalBtn");
 
 let currentChat="global";
 let privateChatListener=null;
 let alertIcons={};
+let pendingAlerts={};
+let blockedUsers={};
 let userData={};
 let currentPartnerUID=null;
-let blockedUsers={};
 
-// LOGIN/LOGOUT
+// Solicitar permissão notificação
+if("Notification" in window) Notification.requestPermission();
+
 loginBtn.onclick=()=>auth.signInWithPopup(new firebase.auth.GoogleAuthProvider());
 logoutBtn.onclick=()=>auth.signOut();
 
@@ -152,8 +153,6 @@ auth.onAuthStateChanged(user=>{
     alertaLogin.style.display="none";
     msgInput.disabled=false;
     sendBtn.disabled=false;
-    clearGlobalBtn.style.display="inline-block";
-
     userData={uid:user.uid,name:user.displayName,photo:user.photoURL};
     db.ref("online/"+user.uid).set({name:user.displayName,photo:user.photoURL});
     db.ref("online/"+user.uid).onDisconnect().remove();
@@ -165,7 +164,6 @@ auth.onAuthStateChanged(user=>{
     alertaLogin.style.display="inline-block";
     msgInput.disabled=true;
     sendBtn.disabled=true;
-    clearGlobalBtn.style.display="none";
     userData={};
     currentPartnerUID=null;
     updateUserList();
@@ -173,7 +171,6 @@ auth.onAuthStateChanged(user=>{
   }
 });
 
-// Carregar bloqueados
 function loadBlockedUsers(){
   if(!userData.uid) return;
   db.ref(`blocked/${userData.uid}`).once("value").then(snap=>{
@@ -181,7 +178,6 @@ function loadBlockedUsers(){
   });
 }
 
-// BLOQUEAR/DEBLOQUEAR
 function toggleBlock(uid){
   if(!userData.uid) return;
   const ref=db.ref(`blocked/${userData.uid}/${uid}`);
@@ -197,7 +193,6 @@ function toggleBlock(uid){
   }
 }
 
-// FUNÇÃO PARA ATUALIZAR USUÁRIOS
 function updateUserList(){
   db.ref("online").once("value").then(snap=>{
     const users=snap.val()||{};
@@ -252,9 +247,18 @@ function updateUserList(){
       mob.className="userItemMobile";
       mob.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}" title="${u.name}">`;
       mob.onclick=()=>startPrivateChat(uid,u.name);
+      const mobBlockBtn=document.createElement("button");
+      mobBlockBtn.textContent = blockedUsers[uid]?"Desbloquear":"Bloquear";
+      mobBlockBtn.onclick=(e)=>{
+        e.stopPropagation();
+        toggleBlock(uid);
+        mobBlockBtn.textContent = blockedUsers[uid]?"Desbloquear":"Bloquear";
+      };
+      mob.appendChild(mobBlockBtn);
       mobileUserLine.appendChild(mob);
 
       alertIcons[uid]={desktop:div,mobile:mob};
+      pendingAlerts[uid]=false;
     }
 
     onlineCount.textContent=`👥 Usuários online: ${Object.keys(users).length}`;
@@ -262,19 +266,18 @@ function updateUserList(){
   });
 }
 
-// CHAT GLOBAL
 function startGlobalChat(){
   currentChat="global";
   currentPartnerUID=null;
   currentPartnerEl.textContent="🌍 Global";
   chatWindow.innerHTML="";
   generalBtn.style.display="none";
-  db.ref("chatGlobal").once("value").then(s=>s.forEach(m=>showMessage(m.val(),"chatGlobal")));
+  db.ref("chatGlobal").once("value",s=>s.forEach(m=>showMessage(m.val(),"chatGlobal")));
 }
 
-// INICIAR CHAT PRIVADO
 function startPrivateChat(uid,name){
   if(blockedUsers[uid]) { alert("Este usuário está bloqueado."); return; }
+  clearUserAlert(uid);
   currentPartnerUID=uid;
   currentChat=[userData.uid,uid].sort().join("_");
   currentPartnerEl.textContent=name;
@@ -286,7 +289,6 @@ function startPrivateChat(uid,name){
   privateChatListener.on("child_added",s=>showMessage(s.val(),currentChat,true));
 }
 
-// FUNÇÕES DE MENSAGEM
 sendBtn.onclick=sendMessage;
 msgInput.addEventListener("keypress",e=>{if(e.key==="Enter")sendMessage();});
 
@@ -298,14 +300,14 @@ function sendMessage(){
     return;
   }
   const path=currentChat==="global"?"chatGlobal":"private/"+currentChat;
-  db.ref(path).push({user:userData.name,uid:userData.uid,timestamp:Date.now(),text,hiddenBy:{}});
+  db.ref(path).push({user:userData.name,uid:userData.uid,text,timestamp:Date.now(),photo:userData.photo});
   msgInput.value="";
 }
 
-// Mostrar mensagem e notificação
 function showMessage(msg,room,privateMsg=false){
   if(room!=="chatGlobal" && room!==currentChat) return;
-  if(msg.hiddenBy && msg.hiddenBy[userData.uid]) return;
+  const hiddenBy=msg.hiddenBy||{};
+  if(hiddenBy[userData.uid]) return;
 
   const div=document.createElement("div");
   div.className=msg.uid===userData.uid?"msg userMsg":"msg otherMsg";
@@ -313,16 +315,15 @@ function showMessage(msg,room,privateMsg=false){
   chatWindow.appendChild(div);
   chatWindow.scrollTop=chatWindow.scrollHeight;
 
-  // Se não for do usuário logado, mostrar alerta
-  if(msg.uid!==userData.uid && !privateMsg){
-    const userIcon = alertIcons[msg.uid];
-    if(userIcon){
+  if(msg.uid!==userData.uid){
+    const icon = alertIcons[msg.uid];
+    if(icon && !pendingAlerts[msg.uid]){
       ['desktop','mobile'].forEach(pos=>{
         const dot = document.createElement('div');
         dot.className='alert-dot';
-        userIcon[pos].appendChild(dot);
-        setTimeout(()=>dot.remove(),3000);
+        icon[pos].appendChild(dot);
       });
+      pendingAlerts[msg.uid]=true;
     }
     if(Notification.permission==="granted"){
       new Notification("Nova mensagem", {body:`${msg.user}: ${msg.text}`, icon:msg.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'});
@@ -330,51 +331,24 @@ function showMessage(msg,room,privateMsg=false){
   }
 }
 
-// Pedir permissão de notificação
-if("Notification" in window){
-  Notification.requestPermission();
+function clearUserAlert(uid){
+  if(alertIcons[uid]){
+    ['desktop','mobile'].forEach(pos=>{
+      const dot = alertIcons[uid][pos].querySelector('.alert-dot');
+      if(dot) dot.remove();
+    });
+    pendingAlerts[uid]=false;
+  }
 }
 
-// LISTENERS
-db.ref("chatGlobal").on("child_added",snap=>showMessage(snap.val(),"chatGlobal"));
-
-// APAGAR CHAT LOCAL (privado)
 function hideChat(chatId){
-  if(confirm("Apagar este chat para você?")){
-    const ref=db.ref("private/"+chatId);
-    ref.once("value").then(snap=>{
-      snap.forEach(msgSnap=>{
-        const msgKey = msgSnap.key;
-        const msgData = msgSnap.val();
-        let hiddenBy = msgData.hiddenBy || {};
-        hiddenBy[userData.uid] = true;
-        ref.child(msgKey).update({hiddenBy});
-      });
-      chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Chat apagado. Você pode retomar a conversa clicando no usuário novamente.</div>`;
-    });
+  if(confirm("Apagar este chat localmente?")){
+    chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Chat apagado. Você pode retomar a conversa clicando no usuário novamente.</div>`;
   }
 }
 
-// LIMPAR CHAT GLOBAL LOCAL
-clearGlobalBtn.onclick=()=>{
-  if(confirm("Apagar o chat global apenas para você?")){
-    db.ref("chatGlobal").once("value").then(snap=>{
-      snap.forEach(msgSnap=>{
-        const key = msgSnap.key;
-        const msg = msgSnap.val();
-        const hiddenBy = msg.hiddenBy||{};
-        hiddenBy[userData.uid]=true;
-        db.ref("chatGlobal/"+key).update({hiddenBy});
-      });
-      chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Chat global limpo para você.</div>`;
-    });
-  }
-}
-
-// VOLTAR AO CHAT GLOBAL
 generalBtn.onclick=startGlobalChat;
 
-// SCROLL HORIZONTAL MOBILE
 let scrollInterval;
 function startMobileScroll(){
   clearInterval(scrollInterval);
@@ -385,6 +359,9 @@ function startMobileScroll(){
     if(container.scrollLeft>=container.scrollWidth-container.clientWidth) container.scrollLeft=0;
   },20);
 }
+
+// Listener global
+db.ref("chatGlobal").on("child_added",snap=>showMessage(snap.val(),"chatGlobal"));
 </script>
 </body>
 </html>
