--- a/chat.html
+++ b/chat.html
@@ -47,7 +47,7 @@ header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primar
 #chatContainer { flex:1; display:flex; flex-direction:column; overflow:hidden; position:relative; }
 #chatHeader { display:flex; justify-content:space-between; align-items:center; padding:6px 10px; border-bottom:1px solid #ddd; background:#fafafa; position:relative; }
 #chatWindow { flex:1; overflow-y:auto; padding:10px; background:white; }
-.msg { margin:5px 0; padding:8px; border-radius:8px; max-width:80%; word-wrap:break-word; position:relative; }
+.msg { margin:5px 0; padding:8px; border-radius:8px; max-width:80%; word-wrap:break-word; position:relative; cursor:pointer; }
 .userMsg { background:#e0f7e9; align-self:flex-end; text-align:right; }
 .otherMsg { background:#fff8dc; align-self:flex-start; text-align:left; }
 
@@ -138,7 +138,6 @@ const blockBtn=document.getElementById("blockBtn");
 let currentChat="global";
 let privateChatListener=null;
 let alertIcons={};
-let hiddenChats={};
 let userData={};
 let currentPartnerUID=null;
 let blockedUsers={};
@@ -192,13 +191,12 @@ function toggleBlock(){
     blockedUsers[currentPartnerUID]=true;
     blockBtn.textContent="Desbloquear";
     alert("Usuário bloqueado.");
-    startGlobalChat();
   }
 }
 
 blockBtn.onclick=toggleBlock;
 
-// FUNÇÃO PARA ATUALIZAR USUÁRIOS
+// FUNÇÕES DE USUÁRIOS
 function updateUserList(){
   db.ref("online").once("value").then(snap=>{
     const users=snap.val()||{};
@@ -267,7 +265,6 @@ function startGlobalChat(){
 
 // INICIAR CHAT PRIVADO
 function startPrivateChat(uid,name){
-  if(blockedUsers[uid]) { alert("Este usuário está bloqueado."); return; }
   currentPartnerUID=uid;
   currentChat=[userData.uid,uid].sort().join("_");
   currentPartnerEl.textContent=name;
@@ -283,13 +280,11 @@ function startPrivateChat(uid,name){
     const msg=snap.val();
     showMessage(msg,currentChat);
     if(msg.uid!==userData.uid){
-      // Notificação persistente
       const icon=alertIcons[msg.uid]?.desktop;
       if(icon && !icon.querySelector(".alert-dot")){
         const dot=document.createElement("div");
         dot.className="alert-dot";
         icon.appendChild(dot);
-        alertIcons[msg.uid].mobile.querySelector(".alert-dot")?.remove();
         const dotMob=dot.cloneNode();
         alertIcons[msg.uid].mobile.appendChild(dotMob);
       }
@@ -305,7 +300,7 @@ function sendMessage(){
   const text=msgInput.value.trim();
   if(!text || !userData.uid) return;
   if(currentPartnerUID && blockedUsers[currentPartnerUID]){
-    alert("Você está bloqueado por este usuário ou bloqueou este usuário.");
+    alert("Você bloqueou este usuário ou está bloqueado.");
     return;
   }
   const path=currentChat==="global"?"chatGlobal":"private/"+currentChat;
@@ -318,7 +313,7 @@ function showMessage(msg,room){
   const div=document.createElement("div");
   div.className=msg.uid===userData.uid?"msg userMsg":"msg otherMsg";
   div.textContent=`${msg.user}: ${msg.text}`;
-  div.onclick=()=>{ // remover notificação
+  div.onclick=()=>{
     const icon=alertIcons[msg.uid]?.desktop;
     if(icon) icon.querySelector(".alert-dot")?.remove();
     const iconMob=alertIcons[msg.uid]?.mobile;
